--- a/templates/activitycard.mustache
+++ b/templates/activitycard.mustache
@@ -25,8 +25,7 @@ Example context (json):
          data-title="{{formattedname}}"
          data-contextid="{{cm.context.id}}"
          data-instance="{{cm.instance}}"
-         data-courseid="{{cm.course}}"
-         data-original-intro="{{originalintro}}">
+         data-courseid="{{cm.course}}">
         {{^cardonly}}
         {{#showposterimage}}
         <div class="image-container position-relative {{#hasanalytics}}hasanalytics{{/hasanalytics}}">
