--- a/templates/player.mustache
+++ b/templates/player.mustache
@@ -189,7 +189,7 @@ Example context (json):
             <span data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
                   data{{bs}}-trigger="hover"
                   role="button"
-                  data{{bs}}-title="{{#str}}play, mod_interactivevideo{{/str}}"
+                  data{{bs}}-title="{{#str}}playtooltip, mod_interactivevideo{{/str}}"
                   id="playpause"
                   class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-0">
                 <i class="bi bi-play-fill fs-25px"></i>
@@ -213,7 +213,7 @@ Example context (json):
               class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-1 mx-1"
               data{{bs}}-toggle="tooltip" data{{bs}}-container="#wrapper"
               data{{bs}}-trigger="hover"
-              data{{bs}}-title="{{#str}}mute,mod_interactivevideo{{/str}}"><i class="bi bi-volume-up"></i></span>
+              data{{bs}}-title="{{#str}}mutetooltip,mod_interactivevideo{{/str}}"><i class="bi bi-volume-up"></i></span>
         {{> mod_interactivevideo/captionmenu }}
         {{> mod_interactivevideo/speedmenu }}
         {{> mod_interactivevideo/qualitymenu }}
