--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -145,9 +145,9 @@ Example context (json):
                     <td>
                         <div class="w-100 d-flex align-items-center justify-content-between">
                             <div class="d-flex align-items-center flex-grow-1 type-name rotatey-360">
-                                <button class="border-0 btn btn-sm type-icon iv-mr-2" title="">
+                                <span class="border-0 btn btn-sm type-icon iv-mr-2" title="">
                                     <i class="fa fa-fw"></i>
-                                </button>
+                                </span>
                                 <span data-editable="title"
                                       class="title iv-font-weight-bold text-primary cursor-pointer"></span>
                                 <input type="text"
