--- a/templates/playermodal.mustache
+++ b/templates/playermodal.mustache
@@ -34,7 +34,7 @@ Example context (json):
                       id="playermodalLabel">
                     <span class="h5 mb-0">
                         <button type="button"
-                                class="btn border-0 m-1 p-1 h5 bg-transparent"
+                                class="btn border-0 m-1 p-1 h5 bg-transparent close-modal"
                                 data-bs-dismiss="modal"
                                 data-dismiss="modal"
                                 aria-label="Close"
