--- a/templates/addcontenttype.mustache
+++ b/templates/addcontenttype.mustache
@@ -23,7 +23,7 @@
     {
     }
 }}
-<div class="modal fade" id="contentmodal-original" role="dialog" aria-labelledby="contentmodal" aria-hidden="true" tabindex="-1">
+<div class="modal fade" id="contentmodal-original" role="dialog" aria-labelledby="contentmodal-original" aria-hidden="true" tabindex="-1">
     <div class="modal-dialog modal-dialog-scrollable" role="document">
         <div class="modal-content iv-rounded-lg">
             <div class="modal-header align-items-center flex-column">
